--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
     https://www.algolia.com/doc/guides/building-search-ui/installation/react/#load-the-style
   -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7/themes/algolia-min.css">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.4.5/themes/satellite-min.css"
+    integrity="sha256-TehzF/2QvNKhGQrrNpoOb2Ck4iGZ1J/DI4pkd2oUsBc=" crossorigin="anonymous">
   <title>gary-algolia-takehome</title>
 </head>
 
